<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.smadil.projectapp.LoginActivity"
    android:background="@drawable/bg_gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:src="@drawable/logo"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#fff"
            android:textColor="#fff">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/mail"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/hintEmail"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="8dp"
                android:textColorHint="#fff"
                android:textColor="#fff"
                android:id="@+id/email" />
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#fff"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#fff"
            android:textColor="#fff"
            android:layout_marginTop="8dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/password"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/hintPass"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="8dp"
                android:textColorHint="#fff"
                android:layout_marginTop="20dp"
                android:textColor="#fff"
                android:id="@+id/password"
                />
        </android.support.design.widget.TextInputLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#fff"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:layout_marginTop="50dp"
            android:background="@drawable/login_btn"
            android:text="@string/btLogin"
            android:clickable="true"
            android:padding="16dp"
            android:textAllCaps="true"
            android:textColor="@color/startColor"
            android:textSize="18sp"
            android:id="@+id/btnLogin"
            android:onClick="onLogin"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:layout_marginTop="16dp"
            android:background="@drawable/signup_btn"
            android:text="@string/btSignUp"
            android:clickable="true"
            android:padding="16dp"
            android:textAllCaps="true"
            android:textColor="#fff"
            android:textSize="18sp"
            android:id="@+id/btnReg"
            android:onClick="onSignup"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textColor="#fff"
            android:textSize="12sp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            android:textSize="15sp"
            android:background="@android:color/transparent"
            android:textColor="#fff"
            android:id="@+id/skipbtn"
            android:onClick="onSkip"
            android:clickable="true"/>

    </LinearLayout>

</RelativeLayout>
