<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.smadil.projectapp.GalleryActivity"
    android:background="@color/bgColor">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:id="@+id/collapsingToolbar"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimaryDark"
            app:expandedTitleMarginStart="40dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/index"
                android:id="@+id/place_image"/>

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="7dp"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="10dp">

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="22sp"
                    android:fontFamily="sans-serif"
                    android:text="@string/heading"
                    android:id="@+id/place_name"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif"
                    android:text="@string/address"
                    android:layout_marginTop="15dp"
                    android:id="@+id/place_address"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif"
                    android:text="@string/rating"
                    android:gravity="center"
                    android:drawableLeft="@drawable/star"
                    android:paddingRight="10dp"
                    android:background="@color/endColor"
                    android:layout_marginTop="15dp"
                    android:id="@+id/place_rating"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info"
                    android:textSize="24sp"
                    android:fontFamily="sans-serif"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="15dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif"
                    android:text="@string/desc"
                    android:layout_marginTop="15dp"
                    android:id="@+id/place_description"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAllCaps="false"
                    android:background="@drawable/signup_btn"
                    android:textColorHint="#fff"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif"
                    android:text="@string/address_uri"
                    android:layout_marginTop="15dp"
                    android:id="@+id/place_address_uri"
                    android:clickable="true"
                    android:onClick="onLocation"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>