<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:id="@+id/imageView"
                android:scaleType="centerCrop"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/placename"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/imageView"
                android:text="@string/heading"
                android:textSize="20sp"
                android:textColor="#000"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/placeaddress"
                android:layout_below="@+id/placename"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/imageView"
                android:text="@string/address"
                android:textSize="17sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/placerating"
                android:layout_below="@+id/placeaddress"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="12dp"
                android:layout_toRightOf="@+id/imageView"
                android:background="@color/startColor"
                android:text="@string/rating"
                android:textColor="#fff"
                android:textSize="14sp"
                android:textStyle="bold"
                android:gravity="center"
                android:drawableLeft="@drawable/star"
                android:paddingRight="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/placeaddress_uri"
                android:textSize="1sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/placedescription"
                android:textSize="1sp"
                />

            </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>